--- a/style.css
+++ b/style.css
@@ -391,9 +391,10 @@ ul {
     position: absolute;
     inset: 0;
     background-size: cover;
-    background-position: center top;
+    background-position: center 20%;
     background-repeat: no-repeat;
     z-index: 1;
+    transform: scale(1.08);
 }
 
 .hero-overlay {
