--- a/style.css
+++ b/style.css
@@ -1878,15 +1878,7 @@ ul {
 }
 
 .cita-quote::before {
-    content: '\201C';
-    font-size: 6rem;
-    color: var(--accent);
-    position: absolute;
-    top: -40px;
-    left: -10px;
-    font-family: var(--font-display);
-    line-height: 1;
-    opacity: 0.4;
+    display: none;
 }
 
 .cita-author {
